# xiaozhen

./: .env.example  .gitignore  SPEC.md  THIRD_PARTY_NOTICES.md  pyproject.toml
tests/: test_m1_worldsim.py
worldsim/backend/: main.py  worldsim_db.py  worldsim_economy.py  worldsim_engine.py  worldsim_events.py  worldsim_init.py  worldsim_models.py  worldsim_policies.py  worldsim_terrain.py  worldsim_trade.py  worldsim_validator.py  worldsim_worldwill.py
worldsim/frontend/: package.json  pnpm-lock.yaml  vite.config.ts
worldsim/frontend/src/: App.tsx  style.css
worldsim/frontend/src/api/: client.ts
worldsim/frontend/src/components/: EventLog.tsx  HexMap.tsx  InterventionPanel.tsx  InterventionTimeline.tsx  NationPanel.tsx  PolicyViewer.tsx  TickControl.tsx  WorldWillToolbar.tsx
worldsim/frontend/src/store/: worldStore.ts
